GNOME Bugzilla – Bug 780179
m3u8: Fix parsing EXT-X-DISCONTINUITY
Last modified: 2017-03-17 10:15:20 UTC
EXT-X-DISCONTINUITY tag should have no trailing ":" character
Created attachment 348145 [details] [review] m3u8: Fix parsing EXT-X-DISCONTINUITY
Attachment 348145 [details] pushed as b8344ea - m3u8: Fix parsing EXT-X-DISCONTINUITY