m3u8: Fix parsing EXT-X-DISCONTINUITY

EXT-X-DISCONTINUITY tag should have no trailing ":" character

https://bugzilla.gnome.org/show_bug.cgi?id=780179