ext/hls/m3u8.c
@@ -605,7 +605,7 @@ gst_m3u8_update (GstM3U8 * self, gchar * data)
           self->discont_sequence = val;
           discontinuity = TRUE;
         }
-      } else if (g_str_has_prefix (data_ext_x, "DISCONTINUITY:")) {
+      } else if (g_str_has_prefix (data_ext_x, "DISCONTINUITY")) {
         self->discont_sequence++;
         discontinuity = TRUE;
       } else if (g_str_has_prefix (data_ext_x, "PROGRAM-DATE-TIME:")) {
